deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: max-weather
  labels:
    app: max-weather
spec:
  selector:
    app: max-weather
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
